completed layout of each game section within form, works respoonsivly on all screen sizes

--- a/assignment1/Content/main.css
+++ b/assignment1/Content/main.css
@@ -1,2 +1,70 @@
 ﻿body {
+  /* Margin bottom by footer height so that sticky footer doesnt cover*/
+   margin-bottom: 60px;
+   background-color:ActiveCaption;
 }
+.game-container h2{
+    text-align:center;
+}
+/*gives some spacing between radio btn and its label*/
+.game-container label{
+    padding-left:4px;
+}
+/*text box fields in form*/
+.game-container input{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display:inline-block;
+    vertical-align:middle;
+    margin-left:20px;
+    border-radius:5px;
+}
+/*labels in form*/
+.game-container span {
+    display:inline-block;
+    float: left;
+    padding-top: 5px;
+    text-align: right;
+    width: 140px;
+}
+
+form{
+    background-color:AppWorkspace;
+    border-radius:7px;
+    padding:10px;
+}
+/*summary button*/
+#buttonDiv{
+    text-align:right;
+}
+#buttonDiv input{
+    margin-top:20px;
+}
+/* mobile media query*/
+@media only screen and (max-width : 395px) {
+    .game-container span {
+        text-align: left;
+        padding-left: 20px;
+    }
+    /*first label - Results*/
+    .game-container > span {
+        width: 70px;
+    }
+
+    #buttonDiv input {
+        margin-right: 41px;
+    }
+}
+
+/*Large desktop media query*/
+@media only screen and (min-width : 1200px) {
+    .game-container span {
+        text-align: left;
+        padding-left: 20px;
+    }
+    /*first label - Results*/
+    .game-container > span {
+        width: 70px;
+    }
+}
+
