--- a/assignment1/MasterPages/Frontend.Master
+++ b/assignment1/MasterPages/Frontend.Master
@@ -7,18 +7,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
+    <asp:ContentPlaceHolder ID="head" runat="server"> </asp:ContentPlaceHolder>
     <!-- Styles -->
     <link href="/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="/Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="/Content/main.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="container-fluid">
-        <form id="form1" runat="server">
+  
             <div id="PageWrapper">
-                <nav class="navbar navbar-inverse navbar-fixed-top">
+                <nav class="navbar navbar-inverse ">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -60,9 +58,7 @@
                     </nav>
                 </footer>
             </div>
-        </form>
-
-    </div>
+    
     <!-- /.container-fluid -->
     <!-- Scripts -->
     <script src="/Scripts/jquery-1.9.1.min.js"></script>
