--- a/assignment1/MasterPages/Frontend.Master
+++ b/assignment1/MasterPages/Frontend.Master
@@ -11,6 +11,7 @@
     <!-- Styles -->
     <link href="/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="/Content/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
     <link href="/Content/main.css" rel="stylesheet" />
 </head>
 <body>
@@ -25,7 +26,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">My Web App</a>
+                        <a class="navbar-brand" href="#">Game Calculator App</a>
                     </div>
                     <!-- /.navbar-header" -->
 
@@ -37,7 +38,8 @@
                         </ul>
                         <!-- /.nav navbar-nav -->
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="about.aspx">About</a></li>
+                            <li><a href="#" data-toggle="modal"
+                                data-target="#aboutModal">About</a></li>
                         </ul>
                         <!-- /.nav navbar-nav navbar-right -->
                     </div>
@@ -53,15 +55,52 @@
                 <footer>
                     <nav class=" navbar navbar-inverse navbar-fixed-bottom">
                         <div class="container-fluid">
-                            <h4 class="navbar-text">&copy Copyright <%=DateTime.Now.Year.ToString()%></h4>
+                            <h4 class="navbar-text">Stephen Ciprian &copy Copyright <%=DateTime.Now.Year.ToString()%></h4>
                         </div>
                     </nav>
                 </footer>
             </div>
+
+    <div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">Game Calculator developed by Stephen Ciprian</h4>
+                </div>
+                <div class="modal-body">
+                    <h3>Thank you for using my web application for your gaming needs. This calculator will keep track of game stats and print out a summary for you.</h3>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     
     <!-- /.container-fluid -->
     <!-- Scripts -->
     <script src="/Scripts/jquery-1.9.1.min.js"></script>
+    <script src="../Scripts/jquery.validate.min.js"></script>
     <script src="/Scripts/bootstrap.min.js"></script>
+    <script>
+        $.validator.addMethod('positiveNumber',
+    function (value) {
+        return Number(value) > 0;
+    }, 'Enter a positive number.');
+        $.validator.addMethod("notEqual", function (value, element, param) {
+            return this.optional(element) || value != param;
+        }, "Points Scored and Points Allowed cannot be equal");
+
+        $("#calculatorForm").validate({
+            rules: {
+                pointsScoredTextBox1: { positiveNumber: true }
+            }
+
+
+
+        });
+    </script>
 </body>
 </html>
