--- a/assignment1/MasterPages/Frontend.Master
+++ b/assignment1/MasterPages/Frontend.Master
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <asp:ContentPlaceHolder ID="head" runat="server"> </asp:ContentPlaceHolder>
+    <asp:ContentPlaceHolder ID="head" runat="server"></asp:ContentPlaceHolder>
     <!-- Styles -->
     <link href="/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="/Content/bootstrap-theme.min.css" rel="stylesheet" />
@@ -15,51 +15,51 @@
     <link href="/Content/main.css" rel="stylesheet" />
 </head>
 <body>
-  
-            <div id="PageWrapper">
-                <nav class="navbar navbar-inverse ">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="#">Game Calculator App</a>
-                    </div>
-                    <!-- /.navbar-header" -->
 
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li><a href="/">Home</a></li>
-                            <li><a href="contact.aspx">Contact</a></li>
-                        </ul>
-                        <!-- /.nav navbar-nav -->
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#" data-toggle="modal"
-                                data-target="#aboutModal">About</a></li>
-                        </ul>
-                        <!-- /.nav navbar-nav navbar-right -->
-                    </div>
-                    <!-- /.navbar-collapse -->
-
-                </nav>
-                <!--/.navbar navbar-default -->
-
-
-                <section id="MainContent">
-                    <asp:ContentPlaceHolder ID="cpMainContent" runat="server"></asp:ContentPlaceHolder>
-                </section>
-                <footer>
-                    <nav class=" navbar navbar-inverse navbar-fixed-bottom">
-                        <div class="container-fluid">
-                            <h4 class="navbar-text">Stephen Ciprian &copy Copyright <%=DateTime.Now.Year.ToString()%></h4>
-                        </div>
-                    </nav>
-                </footer>
+    <div id="PageWrapper">
+        <nav class="navbar navbar-inverse ">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Game Calculator App</a>
             </div>
+            <!-- /.navbar-header" -->
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="contact.aspx">Contact</a></li>
+                </ul>
+                <!-- /.nav navbar-nav -->
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#" data-toggle="modal"
+                        data-target="#aboutModal">About</a></li>
+                </ul>
+                <!-- /.nav navbar-nav navbar-right -->
+            </div>
+            <!-- /.navbar-collapse -->
+
+        </nav>
+        <!--/.navbar navbar-default -->
+
+
+        <section id="MainContent">
+            <asp:ContentPlaceHolder ID="cpMainContent" runat="server"></asp:ContentPlaceHolder>
+        </section>
+        <footer>
+            <nav class=" navbar navbar-inverse navbar-fixed-bottom">
+                <div class="container-fluid">
+                    <h4 class="navbar-text">Stephen Ciprian &copy Copyright <%=DateTime.Now.Year.ToString()%></h4>
+                </div>
+            </nav>
+        </footer>
+    </div>
 
     <div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
         <div class="modal-dialog">
@@ -78,29 +78,31 @@
         </div>
     </div>
 
-    
+
     <!-- /.container-fluid -->
     <!-- Scripts -->
     <script src="/Scripts/jquery-1.9.1.min.js"></script>
     <script src="../Scripts/jquery.validate.min.js"></script>
     <script src="/Scripts/bootstrap.min.js"></script>
     <script>
-        $.validator.addMethod('positiveNumber',
-    function (value) {
-        return Number(value) > 0;
-    }, 'Enter a positive number.');
-        $.validator.addMethod("notEqual", function (value, element, param) {
-            return this.optional(element) || value != param;
-        }, "Points Scored and Points Allowed cannot be equal");
+            $.validator.addMethod('positiveNumber',
+        function (value) {
+            return Number(value) >= 0;
+        }, 'Must be a positive number.');//END addMethod positiveNumber()
+            $.validator.addMethod("notEqualTo", function (value, element, param) {
+                var target = $(param);
+                if (value) return value != target.val();
+                else return this.optional(element);
+            }, "Points Scored cannot equal Points Allowed.");//END addMethod notEqualTo()
+            $.validator.addClassRules({
+                numericInput: {
+                    required: true,
+                    positiveNumber: true
+                }
+            });//END addClassRules()
+            $("#calculatorForm").validate({
 
-        $("#calculatorForm").validate({
-            rules: {
-                pointsScoredTextBox1: { positiveNumber: true }
-            }
-
-
-
-        });
+            });//END validate()
     </script>
 </body>
 </html>
