Completed functions to calculate how many wins and how many losses based on radio button checks and output data to labels on form completion

--- a/assignment1/Content/main.css
+++ b/assignment1/Content/main.css
@@ -4,9 +4,16 @@
    background-color:#ccc;
 }
 form{
-    background-color:lavender;
-    border-radius:7px;
     padding:10px;
+}
+.panel{
+    padding:0;
+}
+h1{
+    text-align:center;
+    font-weight:bold;
+    font-family: 'Roboto Slab', serif;
+    font-size:36px !important;
 }
 .game-container h2{
     text-align:center;
