added a settings button, opens a model window with a dropdown to select the number of games. This hides the extra games and disables their submission and passes the value of games to a hidden field.

--- a/assignment1/Content/main.css
+++ b/assignment1/Content/main.css
@@ -52,24 +52,17 @@ form{
     font-weight:bold;
 }
 
-/*summary button*/
 #buttonDiv{
     text-align:right;
-}
-#buttonDiv input,button{
-    margin-top:20px;
-}
-#buttonDiv button{
-    background-color:none;
+    padding-top:20px;
     border-radius:6px;
-    margin-top:21px;
 }
 #buttonDiv img{
         height:45.4545px;
         width:45.4545px;
-        border-radius:6px;
-        border:1px solid gray;
-        margin-top:20px;
+}
+#settingsButton{
+    border-radius:6px;
 }
 #summary-section span{
     font-size:1.2em;
